# mujoco_ocs2_cartpole

./: LICENSE  README.md  readme.md
cp_controller/: CMakeLists.txt  package.xml
cp_controller/include/cp_controller/: CartpoleDummyVisualization.h  Mujoco_MRT_Dummy_Loop.h
cp_controller/launch/: cp_controller.launch  cp_mj.launch  visualize.launch
cp_controller/rviz/: cartpole.rviz
cp_controller/src/: CartpoleDummyVisualization.cpp  CartpoleMpcNode.cpp  CartpoleMujocoNode.cpp  DummyCartpoleNode.cpp  Mujocoexample.cpp  myMjNode.cpp
cp_controller/urdf/: cartpole.urdf  cartpole.xml  doublebpendlum.xml
cp_interface/: CMakeLists.txt  package.xml
cp_interface/auto_generated/cartpole_dynamics_flow_map/cppad_generated/: cartpole_dynamics_flow_map_forward_zero.c  cartpole_dynamics_flow_map_sparse_jacobian.c
cp_interface/config/mpc/: task.info
cp_interface/include/cp_interface/: CartPoleInterface.h  CartPoleModelnfo.h  CartPoleParameters.h  FactoryFunctions.h  definitions.h  package_path.h.in
cp_interface/include/cp_interface/dynamics/: CartPoleSystemDynamics.h  CartPoleSystemDynamics_pinocchio.h
cp_interface/src/: CartPoleInterface.cpp  CartPoleInterface_pinocchio.cpp  FactoryFunctions.cpp
cp_interface/test/: testCartpole.cpp
